2025-04-02T12:41:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14219850241 # 892
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-02
* notice: last 14d: unq all: 13 18
* notice: prev accum: outdated-unq outdated-all / unq all: 4054 8692 / 4067 8708
* notice: next accum: outdated-unq outdated-all / unq all: 4054 8692 / 4069 8710
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-04-02]

2025-04-02T01:40:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14209650652 # 891
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-02
* notice: last 14d: unq all: 11 16
* notice: prev accum: outdated-unq outdated-all / unq all: 4053 8691 / 4067 8707
* notice: next accum: outdated-unq outdated-all / unq all: 4054 8692 / 4067 8708
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +4 +6 -0 -0 / 4 6
* notice: removed / changed dates: [2025-03-19] / [2025-04-01]

2025-04-01T12:41:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14195878074 # 890
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-01
* notice: last 14d: unq all: 11 16
* notice: prev accum: outdated-unq outdated-all / unq all: 4051 8689 / 4063 8702
* notice: next accum: outdated-unq outdated-all / unq all: 4053 8691 / 4067 8707
* notice: prev exec diff / last date diff / accum: unq all: +4 +5 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [2025-03-18] / [2025-04-01]

2025-04-01T01:50:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14185297741 # 889