@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-02T12:41:06Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2025-04-03T01:39:34Z",
+  "count" : 8,
+  "count_minmax" : [ 2, 8 ],
+  "count_decinc" : [ -0, +8 ],
+  "uniques" : 7,
+  "uniques_minmax" : [ 2, 7 ],
+  "uniques_decinc" : [ -0, +7 ]
 }
