@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-04-02T12:41:06Z",
+  "timestamp" : "2025-04-03T01:39:34Z",
   "count_outdated" : 8692,
   "uniques_outdated" : 4054,
-  "count" : 8710,
-  "uniques" : 4069,
+  "count" : 8716,
+  "uniques" : 4074,
   "clones" : [
     {
       "timestamp": "2025-03-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-03-22T00:00:00Z",
@@ -61,12 +61,12 @@
     },
     {
       "timestamp": "2025-04-02T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 8,
+      "count_minmax": [ 2, 8 ],
+      "count_decinc": [ 0, 8 ],
+      "uniques": 7,
+      "uniques_minmax": [ 2, 7 ],
+      "uniques_decinc": [ 0, 7 ]
     }
   ]
 }
